Mon May 27 22:57:09 2002  Tim Janik  <timj@gtk.org>

	* more i/o channel name fixups.
	
	* bsecompressor.[hc]:
	* bsesimpleresonancefilter.[hc]: removed outdated plugins.

Tue May 21 09:24:25 2002  Tim Janik  <timj@gtk.org>

	* bsesequencer.[hc]: changes due to BswNoteSequence changes in BSE.

Tue May 14 21:05:49 2002  Tim Janik  <timj@gtk.org>

	* bsecompressor.[hc]: get rid of this, it's a misnamed and badly
	parameterized module.

	* bseatandistort.[hc]: new module, offering the atan distortion
	that could be achived with bsecompressor. this offers a saner linear
	parameterization range and is a lot faster by using an equivalent
	approximation of GSL.

Tue May 14 03:40:39 2002  Tim Janik  <timj@gtk.org>

	* davxtalstrings.c (xmod_process): fix clipping bug i just introduced.

Tue May 14 02:56:23 2002  Tim Janik  <timj@gtk.org>

	* davxtalstrings.c: some cleanups, provide sane trigger facility
	via input signal and frequency input. finally provide an icon for
	this plugin.

Mon May 13 22:17:17 2002  Tim Janik  <timj@gtk.org>

	* freeverb/bsefreeverb.[hc] (free_verb_reconnect): reset
	the freverb filter when the module got reconnected.
	
	* bsesimpleresonancefilter.[hc]: disable this test module,
	BSE's new biquad filter does things way better.
	
	* *.c: fixes due to new GslClass layout.

Sun May  5 20:31:16 2002  Tim Janik  <timj@gtk.org>

	* bsewaveosc.[hc]: move this into BSE as it's an fundamental
	component and introduces procedures.

Sun Apr 21 21:18:21 2002  Tim Janik  <timj@gtk.org>

	* bseadder.[hc]: implement input channels as jstreams.

	* bsemixer.[hc]: slight cleanups.

Tue Apr 16 08:24:53 2002  Tim Janik  <timj@gtk.org>

	* bsesnooper.[hc]: remove this module from plugins.

	* *.c: category fixes.

Tue Apr  9 03:03:53 2002  Tim Janik  <timj@gtk.org>

	* implemented BseFreeVerb module, a wrapper around the public domain
	FreeVerb code by Jeremy "Jezar" Wakefield.

	* freeverb/comb.hpp, comb.cpp:
	* freeverb/denormals.h, tuning.h: