@@ -1,3 +1,21 @@
+/* BseSimpleADSR - BSE Simpl ADSR Envelope Generator
+ * Copyright (C) 2001-2002 Tim Janik
+ *
+ * This library is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU Library Simpleeral Public License as
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Simpleeral Public License for more details.
+ *
+ * You should have received a copy of the GNU Library Simpleeral Public
+ * License along with this library; if not, write to the
+ * Free Software Foundation, Inc., 59 Temple Place, Suite 330,
+ * Boston, MA 02111-1307, USA.
+ */
 #ifndef	__BSE_MIX_RAMP_AUX__
 #define	__BSE_MIX_RAMP_AUX__
 typedef enum
